--- a/feature-image-search/src/main/res/layout/activity_search.xml
+++ b/feature-image-search/src/main/res/layout/activity_search.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.levnovikov.feature_image_search.SearchActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background" />
 </android.support.constraint.ConstraintLayout>
