--- a/feature-image-search/src/main/res/layout/activity_search.xml
+++ b/feature-image-search/src/main/res/layout/activity_search.xml
@@ -7,15 +7,18 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
         <EditText
             android:id="@+id/search_field"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:lines="1"
+            android:inputType="text"
             android:layout_height="wrap_content"
             android:hint="@string/enter_text_here"
-            android:padding="8dp"/>
+            android:layout_marginEnd="16dp"/>
 
         <Button
             android:id="@+id/search_button"
@@ -30,16 +33,25 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+        <TextView
+            android:id="@+id/search_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/search_input_hint"/>
+
         <ProgressBar
             android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="invisible"/>
 
     </FrameLayout>
 </LinearLayout>
